// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test layout ui structure Match its snapshot When all props exists 1`] = `
<React.Fragment>
  <Navbar />
  <Content>
    <Child />
  </Content>
</React.Fragment>
`;

exports[`Test layout ui structure Match its snapshot When no props exists 1`] = `
<React.Fragment>
  <Navbar />
  <Content />
</React.Fragment>
`;
